added a command in the script section

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,9 @@ source:
 
 build:
   number: 0
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: 
+    - python setup.py install --single-version-externally-managed --record record.txt
+    - jupyter nbextension install --py nodebook
   noarch: python
 
 requirements:
